package state;

/**
 * @author BianWenKai
 * @DATE 2021/12/7 - 10:29
 **/
public interface Tool {

    void mouseDown();

    void mouseUp();

}
